fixed spacing error mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -106,8 +106,7 @@ body{
     flex-wrap: nowrap;
     gap: 1em;
     position: relative;
-    /*top: 7em;*/
-    left: 1em;
+    left: 1.5em;
     justify-content: center;
     top: 0;
     flex-direction: column;
